no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #6.6.0
+VERSION ==>                       #6.7.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -32,7 +32,6 @@ CONFIGURATION ==>                 #Can be from:
                                   #  - eslint --config|-c FILE
                                   #  - ./[../.../].eslintrc.js|y[a]ml|json: JavaScript, YAML or JSON
                                   #  - PACKAGE.JSON.eslintConfig OBJ
-                                  #  - ~/.eslintrc
                                   #If there are several (e.g. ./.eslintrc.js and ../.eslintrc.js), merges them.
 
 CONF.root                         #BOOL. If true, do not look in parent directories for other CONF files
@@ -75,6 +74,8 @@ package.json "eslintIgnore" STRARR#Files in /node_modules and /bower_components 
 
 eslint --ignore-path FILE         #Alternative name for .eslintignore (e.g. reusing .gitignore)
 eslint --no-ignore                #Do not use .eslintignore
+
+CONF.ignorePatterns               #'PATTERN'_ARR. Like .eslintignore
 
 eslint --ext EXT,...              #File extensions (def: .js)
 
@@ -297,8 +298,6 @@ SOURCECODE.
  getFirst|LastToken[s]Between
  (NODE|TOKEN, NODE|TOKEN2[, OPTS])
  ->TOKEN[_ARR]                    #
-SOURCECODE.isSpaceBetweenTokens
- (TOKEN, TOKEN2)->BOOL            #
 
 SOURCECODE.getAllComments()
   ->STR_ARR                       #
@@ -969,7 +968,10 @@ prefer-const [OBJ]                #Avoid const declarations of variables that ar
 
 no-global-assign [OBJ]            #Avoid assigning to builtin global variables (e.g. window, global, process)
                                   #OBJ: exceptions 'VAR'_ARR
-no-implicit-globals               #Top-level var VAR must be GLOBAL.VAR instead
+no-implicit-globals [OBJ]         #Top-level QUAL VAR must be GLOBAL.VAR instead
+                                  #OBJ:
+                                  #  - lexicalBindings BOOL (def: false): if in browser script mode (not CommonJS nor ESM),
+                                  #    must avoid top-level QUAL VAR altogether
 
 one-var [STR] [OBJ]               #Chained declarations, e.g. var VAR, VAR2;
                                   #STR:
@@ -1074,6 +1076,7 @@ camelcase [OBJ]                   #VAR must be camelCase or CONSTANT_CASE
                                   #OBJ:
                                   #  - properties 'always' (def) or 'never'
                                   #  - ignoreDestructuring BOOL (def: false)
+                                  #  - ignoreImports BOOL (def: false)
                                   #  - allow 'VAR'_ARR
 id-match 'REGEXP' [OBJ]           #VAR names matching
                                   #Example: '^[a-z]+([A-Z][a-z]+)*$' for camelCase with only letters
@@ -1085,6 +1088,7 @@ no-underscore-dangle [OBJ]        #Avoid naming _VAR
                                   #OBJ:
                                   #  - allow '_VAR'_ARR
                                   #  - allowAfterThis BOOL (def: false): ignore for this._VAR
+                                  #  - allowAfterThisConstructor BOOL (def: false): ignore for this.constructor._VAR
                                   #  - allowAfterSuper BOOL (def: false): ignore for super._VAR
                                   #  - enforceInMethodNames BOOL: if false (def), ignore for class methods
 unicorn/prevent-abbreviations    ##Prevent abbreviations/shortnames for variable names.
@@ -1174,6 +1178,7 @@ no-negated-condition              #Avoid !TEST if there is an else branch
 no-constant-condition [OBJ]       #Avoid constant in TEST
                                   #OBJ: checkLoops BOOL (def: true) (if inside a loop)
 no-self-compare                   #Avoid comparisons where both sides are the same
+no-dupe-else-if                   #Avoid if (TEST) else if (TEST2) else if (TEST2) (i.e. repeated TEST2)
 
 yoda [STR] [OBJ]                  #Handling of Yoda expressions.
                                   #STR: 'never' (def), 'always'
@@ -1345,8 +1350,11 @@ accessor-pairs [OBJ]              #Must have both get and set if one present
                                   #  - setWithoutGet BOOL (def: true): if set, must have get
                                   #  - getWithoutSet BOOL (def: true): if get, must have set
                                   #  - enforceForClassMembers BOOL (def: false): for CLASS too
+grouped-accessor-pairs [STR]      #get and set must be defined next to each other.
+                                  #Order is STR: 'anyOrder' (def), 'getBeforeSet', 'setBeforeGet'
 getter-return [OBJ]               #Getters must have return statement
                                   #OBJ: allowImplicit BOOL: if false (def), forbid "return" with no VAL
+no-setter-return                  #Setters must have no return statement
 fp/no-get-set                    ##Avoid getters/setters
 fp/no-proxy                      ##Avoid Proxy
 
@@ -1401,7 +1409,9 @@ dot-notation [OBJ]                #Must use VAR.VAR2 not VAR["VAR2"]
                                   #OBJ:
                                   #  - allowKeywords BOOL (def: true): if false, reversed keywords must use VAR["VAR2"]
                                   #  - allowPattern REGEXP: VAR2 matching REGEXP can use either
-no-useless-computed-key           #Avoid { [VAL_LIT]: VAL }
+no-useless-computed-key [OBJ]     #Avoid { [VAL_LIT]: VAL }
+                                  #OBJ:
+                                  #  - enforceForClassMembers BOOL (def: false): including inside CLASS
 quote-props [STR] [OBJ]           #Quotes around { "VAR": VAL }
                                   #STR:
                                   #  - 'always' (def)
@@ -1450,13 +1460,16 @@ no-new-object                     #Avoid new Object()
 no-useless-constructor            #Avoid empty constructors
 constructor-super                 #Avoid super() in constructor if not child TYPE. Requires it otherwise.
 no-this-before-super              #Avoid this before super(), in child TYPE constructor
+no-constructor-return             #Do not return values in constructors
 
 new-parens [STR]                  #Forces new TYPE(), instead of new TYPE
                                   #STR: 'always' (def) or 'never'
 
 no-useless-call                   #Avoid OBJ.FUNC.call|apply(OBJ, ...) or FUNC.call|apply(null|undefined, ...)
 no-extra-bind                     #Avoid FUNC.bind() if FUNC does not use this
-no-invalid-this                   #Avoid this outside methods
+no-invalid-this [OBJ]             #Avoid this outside methods
+                                  #OBJ:
+                                  #  - capIsConstructor BOOL (def: true): ignores functions that starts with uppercase
 class-methods-use-this [OBJ]      #CLASS methods must use "this"
                                   #OBJ:
                                   #  - exceptMethods "FUNC"_ARR
@@ -1591,6 +1604,7 @@ use-isnan [OBJ]                   #Must test NaN with [Number.]isNaN()
                                   #  - enforceForIndexOf BOOL (def: false): forbid ARR.[last]indexOf(NaN)
 no-compare-neg-zero               #Avoid VAL === -0 (prefer Object.is(VAL, -0))
 
+prefer-exponentiation-operator    #Must use ** not Math.pow()
 unicorn/
  prefer-exponentiation-operator   #Must use ** not Math.pow()
 no-bitwise [OBJ]                  #Avoids ^ ~ << >> >>> <<< & | (possible typo for && ||)
