no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -313,34 +313,35 @@ require('timers')                               #Module for clear|setImmediate|I
                                              \=+===============================+=/
 
 
-STEPS ==>                                    13*#  - resolution (all): relative PATH to absolute PATH
-                                             13*#  - fetch|read file (all)
-                                             13*#  - global context:
-                                             13*#     - require(): set global context to add exports, require, module, __filename, __dirname
-                                             13*#        - before Node 11, was wrapping in anonymous function, with global variables as
-                                             13*#          arguments, i.e. (function(GLOBALS...){...})(...)
-                                             13*#     - import[()]: does not add those global variables
-                                             13*#  - parsing:
-                                             13*#     - require(), import(): normal
-                                             13*#     - import: also find symbols from named imports (import { VAR }) and link them
-                                             13*#  - running|evaluating (all)
-                                             13*#  - cache return value (all)
+STEPS ==>                                       #  - resolution: relative PATH to absolute PATH
+                                                #  - fetch|read file
+                                                #  - sets top-level context
+                                                #  - parsing
+                                                #  - running|evaluating
+                                                #  - cache return value
 
-PARSE-TIME VS RUNTIME ==>                    13*#  - require(), import(): everything done runtime
-                                             13*#  - import: everything done parse-time:
-                                             13*#     - cannot do e.g. export { VAL as [DYNAMIC_VAR] }
-                                             13*#     - cannot catch errors in try/catch (e.g. optional dependency)
-                                             13*#     - better static analysis
-                                             13*#     - VAR are implicitely const
+PARSE-TIME VS RUNTIME ==>                       #CommonJS, import(): everything done runtime
+                                             13*#import: everything done parse-time:
+                                             13*#  - cannot do e.g. export { VAL as [DYNAMIC_VAR] }
+                                             13*#  - cannot catch errors in try/catch (e.g. optional dependency)
+                                             13*#  - better static analysis
+                                             13*#  - VAR are implicitely const
+                                             13*#  - also find imported|exported symbols (VAR) and link them
 
-SYNC VS ASYNC ==>                            13*#  - require(): sync
-                                             13*#  - import:
-                                             13*#     - async parsing (parse-time)
-                                             13*#     - sync loading (runtime)
-                                             13*#  - import(): async with PROMISE
+SYNC VS ASYNC ==>                               #CommonJS: sync
+                                             13*#import:
+                                             13*#  - async parsing (parse-time)
+                                             13*#  - sync loading (runtime)
+                                             13*#import(): async with PROMISE
 
-TOP-LEVEL ==>                                13*#  - require(), import(): does not have to be top-level
-                                             13*#  - import: must be top-level
+TOP-LEVEL ==>                                   #CommonJS, import(): any level
+                                             13*#import: must be top-level
+
+TOP-LEVEL CONTEXT ==>                           #CommonJS:
+                                                #  - has exports, require, module, __filename, __dirname
+                                                #  - before Node 11, was wrapping in anonymous function, with global variables as
+                                                #    arguments, i.e. (function(GLOBALS...){...})(...)
+                                             13*#ESM: only import, export, import.meta
 
 TOP-LEVEL THIS ==>                              #CommonJS: according to ENVVAR NODE_MODULE_CONTEXTS:
                                                 #  - 0 (def): module.exports
@@ -350,17 +351,19 @@ TOP-LEVEL THIS ==>                              #CommonJS: according to ENVVAR N
 DEFAULT EXPORT ==>                              #CommonJS: it is the whole export (module.exports)
                                              13*#ESM: it is a property named 'default'
 
-CIRCULAR DEPENDENCIES ==>                    13*#  - import(), dynamic require(): no issues
-                                             13*#  - top-level require(): retrieve `module.exports` (not individual properties) by reference (not value)
-                                             13*#     - if accessed during file load, empty object (parent not done loading)
-                                             13*#        - including destructuring during `require()`
-                                             13*#     - but works after file load:
-                                             13*#        - unless parent does `module.exports = VAL` (as opposed to `module.exports.VAR = VAL`), as it removes the reference
-                                             13*#  - import: retrieve individual properties by reference (not value)
-                                             13*#     - if accessed synchronously, throws error (parent not done loading)
-                                             13*#     - otherwise works
+CIRCULAR DEPENDENCIES ==>                       #import(), dynamic require(): no issues
+                                                #top-level require():
+                                                #  - retrieve `module.exports` (not individual properties) by reference (not value)
+                                                #  - if accessed during file load, empty object (parent not done loading)
+                                                #     - including destructuring during `require()`
+                                                #  - but works after file load:
+                                                #     - unless parent does `module.exports = VAL` (as opposed to `module.exports.VAR = VAL`), as it removes the reference
+                                             13*#import:
+                                             13*#  - retrieve individual properties by reference (not value)
+                                             13*#  - if accessed synchronously, throws error (parent not done loading)
+                                             13*#  - otherwise works
 
-FILE TYPE ==>                                13*#Decided by:
+FORMAT ==>                                   13*#Decided by:
                                              13*#  - FILE.mjs|cjs -> ESM|CommonJS
                                              13*#  - FILE.js -> PACKAGE.type 'module|commonjs' (def: 'commonjs')
                                              13*#     - `package.json` can be in nested directories
